Migrating to UI router.

--- a/www/index.html
+++ b/www/index.html
@@ -53,11 +53,9 @@
     <!-- <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script> -->
 
     <!-- bower components -->
-
+    <div ui-view></div>
     
-    
-    <div ng-view></div>
-    <script src="js/components/home/home.js"></script>
+<!--    <script src="js/components/home/home.js"></script> -->
 
   </body>
 </html>
