Changed to a more modular and elegant redirection style.

--- a/www/index.html
+++ b/www/index.html
@@ -50,10 +50,13 @@
     
     
     <script src="build/bower.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/services/userAuth.js"></script> 
-    <script src="js/components/home/home.js"></script>
 
+    <script src="js/app.js"></script>
+    <script src="js/services/userAuth.js"></script>
+    <script src="js/services/localStorage.js"></script>
+    <script src="js/components/home/middleware/stateChangeAccess.js"></script>
+    <script src="js/components/home/home.js"></script>
+    <script src="js/services/session.js"></script>
 
 
 
