--- a/www/index.html
+++ b/www/index.html
@@ -60,6 +60,7 @@
   <script src="js/components/login/middleware/stateChangeAccess.js"></script>
   <script src="js/components/login/login.js"></script>
   <script src="js/components/home/home.js"></script>
+  <script src="js/components/patients/patientController.js"></script>
   <script src="js/services/session.js"></script>
   <script src="js/services/requestToFirebase.js"></script>
 
